FIX: Bot avatar not visible in carousel

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -486,7 +486,7 @@
 /* messages */
 
     .icon-and-message {
-        display: flex;
+        display: inline-flex;
     }
 
     .wc-message-wrapper {
